# ClawDog

./: README.md  pyproject.toml
default-workspace/: user.config.yaml
default-workspace/agents/rex/: AGENT.md
src/cli/: chat_loop.py  main.py
src/core/: agent.py  agent_loader.py  session_state.py
src/provider/llm/: base.py
src/utils/: config.py  def_loader.py  settings.py
