[project]
name = "clawdog"
version = "0.1.0"
description = "AI agent framework"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "litellm>=1.83,<2",
    "pydantic>=2.12,<3",
    "pydantic-settings>=2.11,<3",
    "python-dotenv>=1.0,<2",
    "pyyaml>=6.0,<7",
    "rich>=15,<16",
    "typer>=0.23,<1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
